# Forward-deployed-eng-interview

./: .gitignore  README.md  consumer.py  docker-compose.yml  pyproject.toml  signals.py  synthetic_signals.py
src/forward_deployed_eng_interview/: __init__.py
